* 0.4.2   * Correción en el formulario de configuración: Desplegable de regiones AWS